Fri Oct  6 22:00:32 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:49:06 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 10:30:58 1995 Keith Vetter (keithv@fusion.com)

	* md5crypt.c: put function prototype back in, fixed signed/unsigned
		mismatch and removed unused variables.
	* md5glue.c: put function prototypes back in.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * md5crypto.c, t_cksum.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * md5crypto.c : Replace KEYTYPE_DES_CBC_MD5 for KEYTYPE_DES.

	* t_cksum.c : Remove krb5_enctype references, and replace with
                krb5_keytype where appropriate.

Thu Aug 24 18:40:48 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Thu Jul 27 15:22:42 EDT 1995	Paul Park	(pjpark@mit.edu)
	* rsa-md5.h - Add this file, relocated from include/krb5.


Fri Jul 7 16:20:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add t_cksum under unix only.
	* configure.in - Define MD5_K5BETA_COMPAT to select compatability for
		md5crypto.c.
	* md5crypto.c - Correct implementation of RSA-MD5-DES checksums.  Add
		ability to understand previous implementation and ability to
		generate these checksums when forced to.
		- Also add verification procedure for these checksums.
	* md5glue.c - Add verifier procedure.
	* t_cksum.c - New checksum verifier test.

Wed Jun 21 10:52:20 1995    <tytso@rsx-11.mit.edu>

	* md5crypto.c, md5glue.c: Change PROTOTYPE -> KRB5_PROTOTYPE

Fri Jun  9 19:18:24 1995    <tytso@rsx-11.mit.edu>

	* md5crypto.c: Fix -Wall nits

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu May 25 22:16:26 1995  Theodore Y. Ts'o  (tytso@dcl)
